Remove slashes in url and base url

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: The Bear and the Frog
 subtitle: 
 description: 
 url: https://703group.github.io/
-baseurl: /The-Bear-and-the-Frog/
+baseurl: /The-Bear-and-the-Frog
 
 #
 # Jekyll Settings
