--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Christopher & Erica Tobin
 title: The Bear and the Frog
 subtitle: 
 description: 
-url: https://703group.github.io/
+url: https://703group.github.io
 baseurl: /The-Bear-and-the-Frog
 
 #
