--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,6 @@ permalink: /archive/:year/:month/:day/:title/
 paginate: 20
 paginate_path: "page/:num"
 category_dir: categories
+
+gems:
+  - jekyll-octicons
