--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ permalink: /archive/:year/:month/:day/:title/
 paginate: 20
 paginate_path: "page/:num"
 category_dir: categories
+excerpt_link: "Read More"
 
 gems:
   - jekyll-octicons
